Added more words to About

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.minima.nav_pages | default: default_paths -%}
     {%- assign page_titles = site.pages | map: 'title' | compact %}
-    <a class="site-title" rel="author" href="{{ '/' | relative_url }}"><img src="/assets/images/logo.png" alt="The Tikkun Line logo which is a bird carrying a phone on the left and the text 'The Tikkun Line' in a sans-serif font on the right." style="width:50%;"></a>
+    <a class="site-title" rel="author" href="{{ '/' | relative_url }}"><img src="/assets/images/logo-2.png" alt="The Tikkun Project logo which is a bird carrying a phone on the left and the text 'The Tikkun Project' in a sans-serif font on the right." style="width:50%;"></a>
 
     {%- unless page_titles == empty %}
       <nav class="site-nav">
